--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,9 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
+    - name: Install system dependencies
+      run: sudo apt-get update && sudo apt-get install -y libudev-dev pkg-config
+        
     - name: Install Rust
       uses: actions-rs/toolchain@v1
       with:
