--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,9 +14,14 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Install system dependencies
+    - name: Install dependencies on Ubuntu
+      if: runner.os == 'Linux'
       run: sudo apt-get update && sudo apt-get install -y libudev-dev pkg-config
-        
+
+#    - name: Install dependencies on macOS
+#      if: runner.os == 'macOS'
+#      run: brew update && brew install pkg-config        
+ 
     - name: Install Rust
       uses: actions-rs/toolchain@v1
       with:
