Use mockpipe as a virtual pipe, rename some methods, fix CI config

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,9 +24,12 @@ jobs:
         toolchain: stable
         components: rustfmt, clippy
         override: true
- 
+
     - name: Install dependencies
       run: cargo fetch
+
+    - name: Run check
+      run: cargo check
 
     - name: Run linting
       run: cargo clippy --all-targets --all-features -- -D warnings
