--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "virtual-serialport"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2021"
 rust-version = "1.59.0"
 description = "Simulates serial ports for testing. Designed to work with the `serialport` crate for virtual serial communication."
 authors = ["Dmitry Demin <dmitry.demin@outlook.com>"]
-license = "MIT"
+license = "MIT OR Apache-2.0"
 readme = "README.md"
 keywords = ["serial", "serialport", "rs232", "testing", "simulation"]
 repository = "https://github.com/dmidem/virtual-serialport"
